[package]
name = "brml-bridge-iost"
version = "0.6.0"
authors = ["Qiannan Lyu <lvqiannan@gmail.com>"]
edition = "2018"

[dependencies]
bs58 = { version = "0.3.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
iost-chain = { git = "https://github.com/bifrost-finance/rust-iost", branch = "master", default-features = false }
iost-keys = { git = "https://github.com/bifrost-finance/rust-iost", branch = "master", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
hex = { version = "0.4.2", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
pallet-authorship = { version = "2.0.0", default-features = false }
sp-application-crypto = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
serde = { version = "1.0.118", optional = true }
serde_json = { version = "1.0.60", default-features = false, features = ["alloc"] }
lite-json = { version = "0.1.0", git = "https://github.com/xlc/lite-json", default-features = false, features = ["float"]}

[dev-dependencies]
assets = { package = "brml-assets", path = "../assets" }
substrate-offchain = { version = "2.0.0", package = "sp-offchain" }

[features]
default = ["std"]
std = [
	"codec/std",
	"iost-chain/std",
    "iost-keys/std",
	"frame-support/std",
	"frame-system/std",
	"hex/std",
	"node-primitives/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"serde",
	"serde_json/std",
]
