[package]
name = "brml-bridge"
version = "0.5.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0-rc6", default-features = false }
inherents = { version = "2.0.0-rc6", package = "sp-inherents", default-features = false }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
sp-core = { version = "2.0.0-rc6", default-features = false }
sp-runtime = { version = "2.0.0-rc6", default-features = false }
sp-std = { version = "2.0.0-rc6", default-features = false }
system = { version = "2.0.0-rc6", package = "frame-system", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0-rc6" }
substrate-offchain = { version = "2.0.0-rc6", package = "sp-offchain" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"inherents/std",
	"node-primitives/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"system/std",
]
