[package]
name = "pallet-chainlink"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
frame-support = { version = "2.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
system = { package = "frame-system", version = "2.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git' }

#[dev-dependencies.sp-core]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#rev = '3e651110aa06aa835790df63410a29676243fc54'
#
#[dev-dependencies.sp-io]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#rev = '3e651110aa06aa835790df63410a29676243fc54'
#
#[dev-dependencies.sp-runtime]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#rev = '3e651110aa06aa835790df63410a29676243fc54'

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"frame-support/std",
	"system/std",
]
