[package]
name = "brml-charge-transaction-fee"
version = "0.8.0"
authors = ["Herry Ho <herry.heyi@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
serde = { version = "1.0.118", optional = true }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }
zenlink-protocol = {package = "zenlink-protocol", git = "ssh://git@github.com/bifrost-finance/Zenlink-DEX-Module.git", default-features = false}
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false, branch = "master"}
orml-currencies = {git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false, branch = "master"}
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "master", default-features = false}

[dev-dependencies]
balances = { package = "pallet-balances", version = "3.0.0", default-features = false }
float-cmp = "0.8.0"
sp-core = "3.0.0"
sp-io = "3.0.0"
smallvec = "1.4.1"


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"node-primitives/std",
	"serde/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-transaction-payment/std",
	"zenlink-protocol/std",
	"sp-arithmetic/std",
	"orml-traits/std",
	"orml-currencies/std",
	"orml-tokens/std"
]
