[package]
name = "brml-convert"
version = "0.6.0"
authors = ["Jamie Deng <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
serde = { version = "1.0.118", optional = true }
sp-runtime = { version = "2.0.0", default-features = false }

[dev-dependencies]
assets = { package = "brml-assets", path = "../assets" }
sp-core = { version = "2.0.0" }
sp-io = { version = "2.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"node-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"serde/std",
	"sp-runtime/std",
]
