[package]
name = "brml-example"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
frame-support = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false }
system = { package = "frame-system", version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false }
chainlink = { package = "pallet-chainlink", path = "../chainlink", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"system/std",
	"sp-std/std",
	"chainlink/std",
]
