[package]
name = "brml-exchange"
version = "0.1.0"
authors = ["Jamie Deng <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
node-primitives = { path = "../../node/primitives", default-features = false }
frame-support = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false }
system = { version = "2.0.0", package = "frame-system", git = "https://github.com/paritytech/substrate", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
	"codec/std",
	"node-primitives/std",
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"system/std",
]
