[package]
name = "brml-minter-reward"
version = "0.6.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
fixed = { version = "1.5.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
serde = { version = "1.0.106", optional = true }
sp-runtime = { version = "2.0.0", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0" }
sp-core = { version = "2.0.0" }
pallet-balances = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"node-primitives/std",
	"fixed/std",
	"frame-support/std",
	"frame-system/std",
	"serde/std",
	"sp-runtime/std",
]