[package]
name = "brml-minter-reward"
version = "0.8.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
fixed = { version = "1.5.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
log = { version = "0.4.14", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false, branch = "master" }
orml-currencies = {git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false, branch = "master"}
serde = { version = "1.0.106", optional = true }
sp-runtime = { version = "3.0.0", default-features = false }
zenlink-protocol = { version = "0.4.0", default-features = false }

[dev-dependencies]
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "master" }
pallet-balances = { version = "3.0.0" }
sp-io = { version = "3.0.0" }
sp-core = { version = "3.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"node-primitives/std",
	"fixed/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-currencies/std",
	"serde/std",
	"sp-runtime/std",
	"zenlink-protocol/std",
]