[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "parachain-info"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }

#cumulus-primitives = { package = "node-primitives",  path = "../../bin/node/primitives", default-features = false }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "master" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "cumulus-primitives/std",
    "frame-support/std",
    "frame-system/std",
]
