[package]
name = "cumulus-parachain-upgrade"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "pallet to manage parachain upgrades"

[dependencies]
# Cumulus dependencies
#cumulus-primitives = { path = "../primitives", default-features = false }
#cumulus-runtime = { path = "../runtime", default-features = false }
#cumulus-primitives = { package = "node-primitives",  path = "../../bin/node/primitives", default-features = false }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "master" }
cumulus-runtime = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "master" }

# Polkadot dependencies
parachain = { package = "polkadot-parachain", git = "https://github.com/paritytech/polkadot", default-features = false , branch = "master" }

# Substrate dependencies
frame-support = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", version = "2.0.0-rc5", default-features = false , branch = "master" }
sp-inherents = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-version = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }

# Other Dependencies
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"]}
serde = { version = "1.0.101", optional = true, features = ["derive"] }

[dev-dependencies]
sp-externalities = { version = "0.8.0", default-features = false }
substrate-test-runtime-client = { version = "2.0.0", default-features = false }
sp-version = { version = "2.0.0", default-features = false }

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'pallet-balances/std',
	'cumulus-runtime/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-std/std',
	'frame-system/std',
	'cumulus-primitives/std',
]
