[package]
name = "brml-poa-manager"
version = "0.7.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
pallet-session = { version = "3.0.0", default-features = false }
serde = { version = "1.0.118", optional = true }
sp-std = { version = "3.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"serde",
	"sp-std/std",
]
