[package]
name = "brml-settlement"
version = "0.4.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
brml-assets = { path = "../assets", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
frame-support = { version = "2.0.0-rc4", default-features = false }
sp-core = { version = "2.0.0-rc4", default-features = false }
sp-runtime = { version = "2.0.0-rc4", default-features = false }
sp-std = { version = "2.0.0-rc4", default-features = false }
system = { version = "2.0.0-rc4", package = "frame-system", default-features = false }

[dev-dependencies]
runtime-io = { version = "2.0.0-rc4", package = "sp-io" }

[features]
default = ["std"]
std = [
	"brml-assets/std",
	"codec/std",
	"node-primitives/std",
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"system/std",
]
