[package]
name = "brml-settlement"
version = "0.7.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
brml-assets = { path = "../assets", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
system = { version = "3.0.0", package = "frame-system", default-features = false }

[dev-dependencies]
runtime-io = { version = "3.0.0", package = "sp-io" }

[features]
default = ["std"]
std = [
	"brml-assets/std",
	"codec/std",
	"node-primitives/std",
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"system/std",
]
