[package]
name = "brml-swap"
version = "0.7.0"
authors = ["Jamie Deng <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
fixed-point = { package = "substrate-fixed", git = "https://github.com/encointer/substrate-fixed", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
serde = { version = "1.0.118", optional = true }
sp-runtime = { version = "3.0.0", default-features = false }

[dev-dependencies]
assets = { package = "brml-assets", path = "../assets" }
float-cmp = "0.8.0"
sp-core = "3.0.0"
sp-io = "3.0.0"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"node-primitives/std",
	"serde/std",
	"sp-runtime/std",
]
