[package]
name = "brml-validator"
version = "0.3.2"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"node-primitives/std",
	"sp-runtime/std",
]

